tests/snapshots/examples_fixtures/effects__14_test_function_default_handlers.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/effects/14_test_function_default_handlers.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
