tests/snapshots/examples_fixtures/effects__15_user_handler_shadows_default.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/effects/15_user_handler_shadows_default.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
