tests/snapshots/examples_fixtures/effects__16_nested_user_default.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/effects/16_nested_user_default.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
