tests/snapshots/examples_fixtures/effects__Telemetry.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/effects/Telemetry.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
